# kachu-launcher

./: README.md
.github/workflows/: build-windows.yml
Kachu_Launcher_Minimal_Project/: README.md
Kachu_Launcher_Minimal_Project/src-tauri/: Cargo.toml  tauri.conf.json
Kachu_Launcher_Minimal_Project/src-tauri/src/: main.rs
Kachu_Launcher_Minimal_Project/ui/: index.html  package.json
Kachu_Launcher_Minimal_Project/ui/src/: App.tsx
src-tauri/: README_TAURI.txt
src-tauri/icons/: icon_placeholder.txt
ui/: README_UI.txt
